objects/CRM_Mtg_BDM_Target__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_BDM_State__c</fullName>
        <formula>CRM_Mtg_BDM__r.State</formula>
        <label>BDM State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Unique_Id__c</fullName>
        <label>BDM Unique Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDM_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Combined_Retail_Target_Percent__c</fullName>
        <formula>CRM_Mtg_Total_Retail_App_Achieved__c /   CRM_Mtg_Total_Retail_App_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Combined Retail Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Combined_Target_App_No_Percent__c</fullName>
        <formula>CRM_Mtg_Total_App_Achieved__c /  CRM_Mtg_Total_App_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Combined Target (App #)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Current_Quarter_Applications__c</fullName>
        <formula>IF(AND(YEAR(TODAY()) = VALUE(TEXT(CRM_Mtg_Year__c)), 
CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
4, 2, 
5, 2, 
6, 2, 
7, 3, 
8, 3, 
9, 3, 
10, 4, 
11, 4, 
12, 4, 
0) = CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0)), 
CRM_Mtg_Total_App_Achieved__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Current_Quarter_Settlements__c</fullName>
        <formula>IF(AND(YEAR(TODAY()) = VALUE(TEXT(CRM_Mtg_Year__c)),
CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
4, 2, 
5, 2, 
6, 2, 
7, 3, 
8, 3, 
9, 3, 
10, 4, 
11, 4, 
12, 4, 
0) = CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0)),
CRM_Mtg_Total_Sett_Achieved__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter Settlements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Current_Target__c</fullName>
        <formula>MONTH(CRM_Mtg_Target_Date__c) = MONTH(Today()) &amp;&amp; YEAR(CRM_Mtg_Target_Date__c) = YEAR(Today())</formula>
        <label>Current Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Default_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_BDM__c</fullName>
        <formula>CRM_Mtg_BDM__r.Id =  $User.Id</formula>
        <label>Is Mortgage BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Last_Quarter_Applications__c</fullName>
        <formula>IF(CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
0) = 1,
IF(AND(YEAR(TODAY()) - 1 = VALUE(TEXT(CRM_Mtg_Year__c)), 
CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0) = 4),
CRM_Mtg_Total_App_Achieved__c,
0),
IF(AND(YEAR(TODAY()) = VALUE(TEXT(CRM_Mtg_Year__c)), 
CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
4, 2, 
5, 2, 
6, 2, 
7, 3, 
8, 3, 
9, 3, 
10, 4, 
11, 4, 
12, 4, 
0) - 1 = CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0)), 
CRM_Mtg_Total_App_Achieved__c, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Quarter Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Last_Quarter_Settlements__c</fullName>
        <formula>IF(CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
0) = 1, 
IF(AND(YEAR(TODAY()) - 1 = VALUE(TEXT(CRM_Mtg_Year__c)), 
CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0) = 4), 
CRM_Mtg_Total_Sett_Achieved__c, 
0), 
IF(AND(YEAR(TODAY()) = VALUE(TEXT(CRM_Mtg_Year__c)), 
CASE(MONTH(TODAY()), 
1, 1, 
2, 1, 
3, 1, 
4, 2, 
5, 2, 
6, 2, 
7, 3, 
8, 3, 
9, 3, 
10, 4, 
11, 4, 
12, 4, 
0) - 1 = CASE(TEXT(CRM_Mtg_Month__c), 
&apos;Jan&apos;, 1, 
&apos;Feb&apos;, 1, 
&apos;Mar&apos;, 1, 
&apos;Apr&apos;, 2, 
&apos;May&apos;, 2, 
&apos;Jun&apos;, 2, 
&apos;Jul&apos;, 3, 
&apos;Aug&apos;, 3, 
&apos;Sep&apos;, 3, 
&apos;Oct&apos;, 4, 
&apos;Nov&apos;, 4, 
&apos;Dec&apos;, 4, 
0)), 
CRM_Mtg_Total_Sett_Achieved__c, 
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Quarter Settlements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_Retail_App_Achieved__c</fullName>
        <formula>CRM_Mtg_NC_Retail_App_Achieved__c + CRM_Mtg_NP_Retail_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP Retail App Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_Retail_App_Target__c</fullName>
        <formula>CRM_Mtg_NC_Retail_Application_No__c +  CRM_Mtg_NP_Retail_Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP Retail App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_Retail_Target_Percentage__c</fullName>
        <formula>IF(CRM_Mtg_NCNP_Retail_App_Target__c = 0, 0, CRM_Mtg_NCNP_Retail_App_Achieved__c /  CRM_Mtg_NCNP_Retail_App_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% NCNP Retail Target #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_Split_Retail_Percentage__c</fullName>
        <formula>IF(CRM_Mtg_Total_Retail_App_Achieved__c = 0, 0, CRM_Mtg_NCNP_Retail_App_Achieved__c / CRM_Mtg_Total_Retail_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP % Retail Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_Split__c</fullName>
        <formula>IF(CRM_Mtg_Total_App_Achieved__c = 0, 0, CRM_Mtg_Total_NCNP_Achieved_App_No__c  / CRM_Mtg_Total_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP % Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_WL_App_Achieved_No__c</fullName>
        <formula>CRM_Mtg_NC_WL_App_Achieved__c +  CRM_Mtg_NP_WL_App_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP WL App Achieved #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_WL_App_Target_No__c</fullName>
        <formula>CRM_Mtg_NC_WL_Application_No__c +  CRM_Mtg_NP_WL_Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP WL App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NCNP_WL_Split_Percentage__c</fullName>
        <formula>IF( CRM_Mtg_Total_WL_App_Achieved__c  = 0, 0,  CRM_Mtg_NCNP_WL_App_Achieved_No__c  / CRM_Mtg_Total_WL_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCNP % WL Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_App_Achieved_Amt__c</fullName>
        <label>NC Retail App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_App_Achieved__c</fullName>
        <label>NC Retail App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC Retail App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC Retail App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Sett_Achieved_Amt__c</fullName>
        <label>NC Retail Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Sett_Achieved__c</fullName>
        <label>NC Retail Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC Retail Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Retail_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC Retail Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_App_Achieved_Amt__c</fullName>
        <label>NC WL App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_App_Achieved__c</fullName>
        <label>NC WL App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC WL App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC WL App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Sett_Achieved_Amt__c</fullName>
        <label>NC WL Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Sett_Achieved__c</fullName>
        <label>NC WL Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Non Conforming</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC WL Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_WL_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NC WL Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_App_Achieved_Amt__c</fullName>
        <label>NP Retail App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_App_Achieved__c</fullName>
        <label>NP Retail App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP Retail App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP Retail App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Sett_Achieved_Amt__c</fullName>
        <label>NP Retail Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Sett_Achieved__c</fullName>
        <label>NP Retail Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP Retail Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_Retail_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP Retail Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_App_Achieved_Amt__c</fullName>
        <label>NP WL App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_App_Achieved__c</fullName>
        <label>NP WL App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP WL App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP WL App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Sett_Achieved_Amt__c</fullName>
        <label>NP WL Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Sett_Achieved__c</fullName>
        <label>NP WL Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Near Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP WL Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NP_WL_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NP WL Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Previous_Target__c</fullName>
        <formula>MONTH(CRM_Mtg_Target_Date__c) = MONTH(TODAY()) &amp;&amp; YEAR(CRM_Mtg_Target_Date__c) = YEAR(TODAY()) - 1</formula>
        <label>Previous Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_App_Achieved_Amt__c</fullName>
        <label>Prime Retail App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_App_Achieved__c</fullName>
        <label>Prime Retail App Achieved #</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Application_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime Retail App Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Application_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime Retail App Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Sett_Achieved_Amt__c</fullName>
        <label>Prime Retail Sett Achieved $</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Sett_Achieved__c</fullName>
        <label>Prime Retail Sett Achieved #</label>
        <summarizedField>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Achieved_Settlements__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Settlement_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Settlement_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Settlement_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime Retail Sett Target $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Settlement_No__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prime Retail Sett Target #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Retail_Split_Percentage__c</fullName>
        <formula>IF(CRM_Mtg_Total_Retail_App_Achieved__c = 0, 0, CRM_Mtg_Prime_Retail_App_Achieved__c /  CRM_Mtg_Total_Retail_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime Retail % Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Split_Percentage__c</fullName>
        <formula>IF (CRM_Mtg_Total_App_Achieved__c = 0, 0, CRM_Mtg_Total_Prime_Achieved_App_No__c /  CRM_Mtg_Total_App_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime % Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_WL_App_Achieved_Amt__c</fullName>
        <label>Prime WL App Achieved $</label>
        <summarizedField>CRM_Mtg_Application_Target__c.CRM_Mtg_Achieved_Applications_Amt__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_Mtg_Application_Target__c.CRM_Mtg_Product__c</field>
            <operation>equals</operation>
            <value>Prime</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_Mtg_Application_Target__c.CRM_Mtg_BDM_Target__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>